<resources>
    <string name="app_name">Calculator</string>

    <!-- Calculator value buttons-->
    <string name="delete" translatable="true">DELETE</string>

    <string name="zero" translatable="false">"0"</string>
    <string name="one" translatable="false">"1"</string>
    <string name="thow" translatable="false">"2"</string>
    <string name="three" translatable="false">"3"</string>
    <string name="four" translatable="false">"4"</string>
    <string name="five" translatable="false">"5"</string>
    <string name="six" translatable="false">"6"</string>
    <string name="seven" translatable="false">"7"</string>
    <string name="eight" translatable="false">8</string>
    <string name="nine" translatable="false">9</string>

    <string name="equeal" translatable="false">=</string>
    <string name="point" translatable="false">.</string>
    <string name="plus" translatable="false">+</string>
    <string name="minus" translatable="false">-</string>
    <string name="multiply" translatable="false">*</string>
    <string name="divide" translatable="false">/</string>
    <string name="power" translatable="false">\^</string>

    <string name="sen" translatable="false">sen</string>
    <string name="cos" translatable="false">cos</string>
    <string name="tan" translatable="false">tan</string>
    <string name="ctg" translatable="false">ctg</string>
    <string name="sec" translatable="false">sec</string>
    <string name="csc" translatable="false">csc</string>

</resources>
