<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="mx.ipn.cic.geo.calculadora_a18.MainActivity">

    <TextView
        android:id="@+id/txtExpresion"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/black"
        android:gravity="center_vertical"
        android:padding="@dimen/_20dp"
        android:text="0"
        android:textAlignment="textEnd"
        android:textColor="@android:color/white"
        android:textSize="34sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorBtnDig"
            android:text="@string/delete"
            android:onClick="onClick"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnOpDivision"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnOp"
            android:onClick="onClick"
            android:text="@string/divide"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btnDigSiete"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/seven"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDigOcho"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/eight"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDigNueve"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/nine"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnOpMult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnOp"
            android:onClick="onClick"
            android:text="@string/multiply"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDigCuatro"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/four"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDigCinco"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/five"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDigSeis"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/six"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnOpResta"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnOp"
            android:onClick="onClick"
            android:text="@string/minus"
            android:textSize="30sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDigUno"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/one"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDigDos"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/thow"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnDigTres"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/three"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnOpSuma"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnOp"
            android:onClick="onClick"
            android:text="@string/plus"
            android:textSize="30sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDigCero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/zero"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnOpPunto"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnDig"
            android:onClick="onClick"
            android:text="@string/point"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnOpIgual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorBtnOp"
            android:onClick="onClick"
            android:text="@string/equeal"
            android:textSize="30sp" />
    </LinearLayout>


</LinearLayout>
